--- a/ShopManagementService/src/main/resources/application.properties
+++ b/ShopManagementService/src/main/resources/application.properties
@@ -1,1 +1,39 @@
+server.port=0
+spring.h2.console.enabled=true
+spring.datasource.platform=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
 
+
+spring.application.name=ShopManagement-Service
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+eureka.instance.preferIpAddress=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+pivotal.shopmanagementservice.name=ShopManagement-Service
+pivotal.productcatalogueservice.name=ProductCatalogue-Service
+
+#pivotal.doctorinfoservice.name=DoctorInfo-Service
+#pivotal.allortmentinfoservice.name=AllortmentInfo-Service
+#pivotal.billinginfoservice.name=BillingInfo-Service
+#pivotal.patientinfoservice.name=PatientInfo-Service
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/allotmentdb
+#spring.datasource.username=root
+#spring.datasource.password=Root@123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql:true
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+#Turn statics on log SQL stmts 
+
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.generate_statics=false
+#logging.level.org.hibernate.type=trace
+#logging.level.org.hibernate.stat=debug
+#
+#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
