--- a/ProductCatalogueService/pom.xml
+++ b/ProductCatalogueService/pom.xml
@@ -83,6 +83,27 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<!-- JUnit 5 -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.8.0</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.8.0</version>
+        <scope>test</scope>
+    </dependency>
+
+    <!-- Mockito -->
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>4.2.0</version>
+        <scope>test</scope>
+    </dependency>
 	</dependencies>
 	<build>
 		<plugins>
